Dashboard view angepasst

--- a/ToDO-Server/src/main/resources/tasks.json
+++ b/ToDO-Server/src/main/resources/tasks.json
@@ -26,46 +26,6 @@
     "completed" : true,
     "tbd" : false
   }, {
-    "id" : "24f821f9-6b60-4cf1-8b44-70272e7d1180",
-    "date" : "2025-12-30",
-    "title" : "sdsd",
-    "description" : "sdsdsdsd",
-    "dateTbd" : null,
-    "completed" : false,
-    "tbd" : false
-  }, {
-    "id" : "cdb71b33-30c7-4cb5-8358-006af2aeb608",
-    "date" : "2026-01-02",
-    "title" : "sdsd",
-    "description" : "",
-    "dateTbd" : null,
-    "completed" : false,
-    "tbd" : false
-  }, {
-    "id" : "6ac08a22-4e33-4971-8760-8fe177172fad",
-    "date" : "2026-01-05",
-    "title" : "teast",
-    "description" : "",
-    "dateTbd" : null,
-    "completed" : false,
-    "tbd" : false
-  }, {
-    "id" : "f505694d-c12a-482c-b51f-dd8ef654fc1f",
-    "date" : "2026-01-05",
-    "title" : "test",
-    "description" : "",
-    "dateTbd" : null,
-    "completed" : false,
-    "tbd" : false
-  }, {
-    "id" : "e0ef94dc-27ef-43de-bc82-bd3f39bb9a5e",
-    "date" : "2026-01-05",
-    "title" : "polizei",
-    "description" : "",
-    "dateTbd" : null,
-    "completed" : false,
-    "tbd" : false
-  }, {
     "id" : "2ad886c1-a3ac-4fb8-a2a3-d8656e58f728",
     "date" : "2026-01-05",
     "title" : "123",
@@ -77,6 +37,22 @@
     "id" : "ec7caaa3-1165-45e0-85e4-17e2dd41437a",
     "date" : "2026-01-05",
     "title" : "test",
+    "description" : "",
+    "dateTbd" : null,
+    "completed" : false,
+    "tbd" : false
+  }, {
+    "id" : "cb097713-611f-4d21-ab16-0855be4ac7aa",
+    "date" : "2026-01-06",
+    "title" : "Johny",
+    "description" : "",
+    "dateTbd" : null,
+    "completed" : false,
+    "tbd" : false
+  }, {
+    "id" : "e52d3b7e-9566-4d7d-bb74-4dec2ef50f02",
+    "date" : "2026-01-06",
+    "title" : "df",
     "description" : "",
     "dateTbd" : null,
     "completed" : false,
